fix profile header align

--- a/frontend/src/components/styles/UserProfileHeader.scss
+++ b/frontend/src/components/styles/UserProfileHeader.scss
@@ -12,6 +12,7 @@
 	// border-color: $blue;
 	box-shadow: 3px 3px 10px #00000025;
 	margin-top: -0.25rem;
+	height: 11rem;
 
 	.MuiGrid-item {
 		padding: 0;
